[project]
name = "crypto-dashboard"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30",
    "pandas>=2.0",
    "requests>=2.31"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "crypto-dashboard"
version = "0.1.0"
description = "Crypto market dashboard for Streamlit"
authors = ["Asa Hays"]
packages = [{ include = "crypto_dashboard" }]